--- a/index.html
+++ b/index.html
@@ -8,52 +8,59 @@
 </head>
 
 <body>
-    <h2>
-        Use this website to play a certain part of a song at a certain time!
-    </h2>
-    <br>
-    <h3><button onclick="exampleSong()">Try a random example!</button></h3>
-    <br>
-    <div id="editingSection">
-        <h2 class="titleHeading">Song:</h2><span class="line" style="padding-left: 5px;">
-            <h3 class="line">YouTube Link:</h3>
-            <input id="song_link" class="line" type="text"
-                placeholder="https://www.youtube.com/watch?v=BjFQRwLj_FQ&pp=ygUScGxheSBlbSBsaWtlIGF0YXJp" />
-        </span>
-        <h2 class="titleHeading">Timing:</h2>
-        <span class="line" style="padding-left: 5px;">
-            <h3>Play song section starting at
-                <input id="song_time" class="line" type="text" placeholder="0:00" value="0:00" /> at
-                <input id="time_of_day" class="line" type="time" placeholder="0:00" value="12:00" />
-            </h3>
-        </span>
-        <h3 class="titleHeading">Describe the song (optional): </h3><textarea id="song_description"
-            placeholder="A song plays at a certain time" rows="2" cols="25"></textarea>
-        <br>
-        <br>
-        <button onclick="playSong()">Start Playing</button>
-    </div>
-    <div id="playingSection" style="display: none;">
-        <br>
-        <h2>Playing <span id="displaySongTime">0:00</span> at <span id="displayTimeOfDay">12:00 PM</span> - <button
-                onclick="editSongSettings()">Edit Settings</button>
-            <br>Current Time: <span id="currentTimeOfDay"></span> - Song Will Start in <span id="timeTillStart">0</span>
+    <div id="headContent">
+        <h2>
+            Use this website to play a certain part of a song at a certain time!
         </h2>
-        <br>
-        <span id="sondDescWrap" style="display: none;">
-            <h2><span id="song-description-display"></h2><br>
-        </span></span>
-        <div id="playerContain">
-            <div id="player">
-                <iframe id="ytVid" width="560" height="315" src="https://www.youtube.com/embed/r90xDchufXE"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
+    </div>
+    <br>
+    <div id="bodyContent">
+        <div id="editingSection">
+            <h2 class="titleHeading">Song:</h2><span class="line" style="padding-left: 5px;">
+                <h3 class="line">YouTube Link:</h3>
+                <input id="song_link" class="line" type="text"
+                    placeholder="https://www.youtube.com/watch?v=BjFQRwLj_FQ&pp=ygUScGxheSBlbSBsaWtlIGF0YXJp" />
+            </span>
+            <h2 class="titleHeading">Timing:</h2>
+            <span class="line" style="padding-left: 5px;">
+                <h3>Play song section starting at
+                    <input id="song_time" class="line" type="text" placeholder="0:00" value="0:00" /> at
+                    <input id="time_of_day" class="line" type="time" placeholder="0:00" value="12:00" />
+                </h3>
+            </span>
+            <h3 class="titleHeading">Describe the song (optional): </h3><textarea id="song_description"
+                placeholder="A song plays at a certain time" rows="2" cols="25"></textarea>
+            <br>
+            <br>
+            <button onclick="playSong()">Start Playing</button></h3>
+            <br>
+            <br>
+            <h3>or</h3>
+            <br>
+            <button onclick="exampleSong()">Try a random example!</button></h3>
         </div>
-        <br>
-        <h2>Share this song schedule: <button id="shareLink" onclick="copyLink()">Copy Link!</button><span
-                id="scheduleUrl" style="display: none;"></span></h2><br>
+        <div id="playingSection" style="display: none;">
+            <br>
+            <h2>Playing <span id="displaySongTime">0:00</span> at <span id="displayTimeOfDay">12:00 PM</span> - <button
+                    onclick="editSongSettings()">Edit Settings</button>
+                <br>Current Time: <span id="currentTimeOfDay"></span> - Song Will Start in <span
+                    id="timeTillStart">0</span>
+            </h2>
+            <br>
+            <span id="sondDescWrap" style="display: none;">
+                <h2><span id="song-description-display"></h2><br>
+            </span></span>
+            <div id="playerContain">
+                <div id="player">
+                    <iframe id="ytVid" width="560" height="315" src="https://www.youtube.com/embed/r90xDchufXE"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+            <br>
+            <h2>Share this song schedule: <button id="shareLink" onclick="copyLink()">Copy Link!</button><span
+                    id="scheduleUrl" style="display: none;"></span></h2><br>
 </body>
 <script src="script.js"></script>
 
