fixed mobile style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Song Scheduler</title>
-    <link rel="stylesheet" href="style.css?new=true1">
+    <link rel="stylesheet" href="style.css?new=true01">
 </head>
 
 <body>
@@ -62,7 +62,9 @@
             <br>
             <h1>Share this song schedule: <button id="shareLink" onclick="copyLink()">Copy Link!</button><span
                     id="scheduleUrl" style="display: none;"></span></h1><br>
+        </div>
+    </div>
 </body>
-<script src="script.js?new=true1"></script>
+<script src="script.js?new=true2"></script>
 
 </html>
